add burger icon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <button onclick="knapp ()">Klicka här!</button>
     <header class="header flex align-center margin-0">
         <h1>Hej</h1>
+        <span>👌👌</span>
     </header>
 
     <main>
